<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_save_login"
        android:title="@string/pref_save_login"
        android:summary="@string/pref_save_login_summ"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_save_pass"
        android:title="@string/pref_save_pass"
        android:summary="@string/pref_save_pass_summ"
        android:defaultValue="false" />

    <!-- <ListPreference
        android:dependency="pref_sync"
        android:key="pref_syncConnectionType"
        android:title="@string/pref_syncConnectionType"
        android:dialogTitle="@string/pref_syncConnectionType"
        android:entries="@array/pref_syncConnectionTypes_entries"
        android:entryValues="@array/pref_syncConnectionTypes_values"
        android:defaultValue="@string/pref_syncConnectionTypes_default" />  -->
</PreferenceScreen>