<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.badcompany.licensetest.MainActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:paddingEnd="30dp"
        android:paddingTop="20dp"
        android:gravity="end"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageButton
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/profile"
                android:background="@drawable/manprofile"
                android:src="@drawable/cstm_prf_border" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:paddingStart="5dp"
                android:paddingBottom="5dp"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textSize="16sp"
                android:textColor="@color/colorAccent" />
            <TextView
                android:id="@+id/txtLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_level"
                android:textSize="16sp"
                android:textColor="@color/colorAccent" />
       </LinearLayout>

        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cstm_btn_main"
        android:elevation="10dp"
        android:text="@string/theory" />

    <Button
        android:id="@+id/btn_cats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:background="@drawable/cstm_btn_main"
        android:text="@string/categories" />

    <Button
        android:id="@+id/btn_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:background="@drawable/cstm_btn_main"
        android:text="@string/learn" />

</LinearLayout>
