<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.badcompany.licensetest.QuizActivity">

    <!--  ORANGE  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2:30"
            android:textSize="20sp" />


    </LinearLayout>

    <!--  ORANGE  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/photo"
            android:contentDescription="@string/question_descrp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/sign"
            android:src="@drawable/cstm_prf_border" />


    </LinearLayout>

    <!--  ORANGE  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cstm_prf_border"
            android:text="@string/def_question"
            android:textSize="20sp" />
    </LinearLayout>

    <!--  ORANGE  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cstm_prf_border"
        android:orientation="vertical">
    <!--  YELLOW  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/holo_orange_light"
        android:gravity="center_horizontal"
        android:padding="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btn_quizA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/def_answer"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_quizB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/def_answer"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_quizC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/def_answer"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_quizD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/def_answer"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout></LinearLayout>
